<resources>
    <string name="app_name">SEALS Weather</string>
    <string name="weather_state">Weather state</string>
    <string name="tab_text_1">Current</string>
    <string name="tab_text_2">Daily</string>
    <string name="tabSettings"> </string>
    <string name="location">Location holder</string>
    <string name="maxTemp">00.0°C</string>
    <string name="minTemp">00.0°C</string>
    <string name="pres">0000.0 hPa</string>
    <string name="hum">RH: 00%</string>
    <string name="wind">0.00 m/s NON</string>
    <string name="dewpt">Dew point: 0.0°C</string>
    <string name="temp">00.0°C</string>
    <string name="tempShort">00°C</string>
    <string name="feelsLike">Feels like: 25.0°C</string>
    <string name="sunrise">06:00</string>
    <string name="sunset">20:00</string>
    <string name="clouds">0% clouds</string>
    <string name="imgDescription">This is an image</string>
    <string name="aqi">AQI: 0</string>
    <string name="visible">00 km visible</string>
    <string name="weatherType">No data</string>
    <string name="forecastDate">2022–08–14 00:00 UTC</string>
    <string name="city">No data</string>
    <string name="dateDay">15</string>
    <string name="dateMonth">08</string>
    <string name="MON">MON</string>
    <string name="title_activity_hourly_forecast">HourlyForecast</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_tabs">SEALS Weather</string>
    <string name="tabCurrentWeather">Current</string>
    <string name="tabDailyForecast">Daily</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">Light weather widget by SUPERSEAL</string>
    <string name="tempC">%1$f °C</string>
    <string name="configure">Configure</string>
</resources>