<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/recycleViewItem"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="6dp"
    android:layout_marginTop="6dp"
    android:layout_marginRight="6dp"
    android:fadingEdge="horizontal"
    android:maxHeight="46dp"
    android:minHeight="120dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:cardBackgroundColor="#131313"
        app:cardCornerRadius="8dp"
        app:cardElevation="-2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/recycleviewWeatherIcon"
        android:layout_width="40sp"
        android:layout_height="40sp"
        android:layout_marginStart="6dp"
        android:baselineAlignBottom="false"
        android:contentDescription="@string/weatherType"
        android:foregroundGravity="center_vertical"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/recyclerviewHour"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/wi_day_cloudy" />

    <TextView
        android:id="@+id/recyclerviewPressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="16dp"
        android:text="@string/pres"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/recyclerviewHumidity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/recyclerviewHour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/dateDay"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/weekDay"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/recyclerviewMinute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:text="@string/dateMonth"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/recyclerviewHour" />

    <TextView
        android:id="@+id/recyclerviewHumidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="5dp"
        android:text="@string/hum"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/recyclerviewTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:text="@string/minTemp"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/recycleviewWeatherIcon"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:contentDescription="@string/imgDescription"
        android:id="@+id/windIntensity"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginEnd="6dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/recyclerviewPressure"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/wi_wind_beaufort_10" />

    <ImageView
        android:contentDescription="@string/imgDescription"
        android:id="@+id/windDirection"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginEnd="-3dp"
        android:scaleType="fitCenter"
        android:transformPivotX="13sp"
        android:transformPivotY="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/cardView"
        app:layout_constraintEnd_toStartOf="@+id/windIntensity"
        app:layout_constraintTop_toTopOf="@+id/cardView"
        app:srcCompat="@drawable/ic_wi_wind_deg" />

    <TextView
        android:id="@+id/weekDay"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:rotation="-90"
        android:text="@string/MON"
        android:textAlignment="center"
        android:textColor="#50FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>