<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.main.Current">

    <TextView
        android:id="@+id/temp"
        android:layout_width="wrap_content"
        android:layout_height="50sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textColor="#FFFFFF"
        android:textSize="42sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/temp" />

    <TextView
        android:id="@+id/weatherType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/temp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/temp"
        tools:text="@string/weatherType" />

    <TextView
        android:id="@+id/humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="1dp"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/temp"
        tools:text="@string/hum" />

    <TextView
        android:id="@+id/pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/sunrise"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="@string/pres" />

    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/sunset"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="@string/city" />

    <TextView
        android:id="@+id/sunrise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="3dp"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/humidity"
        tools:text="@string/sunrise" />

    <TextView
        android:id="@+id/sunset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="3dp"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sunrise"
        tools:text="@string/sunset" />

    <ImageView
        android:id="@+id/imageWeatherType"
        android:layout_width="84dp"
        android:layout_height="83dp"
        android:layout_marginTop="3dp"
        android:backgroundTintMode="src_over"
        android:contentDescription="@string/weatherType"
        app:layout_constraintEnd_toStartOf="@+id/weatherType"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toEndOf="@+id/tempMax"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/wi_cloudy_gusts" />

    <TextView
        android:id="@+id/tempMax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="8dp"
        android:textColor="#FF8848"
        app:layout_constraintStart_toEndOf="@+id/temp"
        app:layout_constraintTop_toTopOf="@+id/temp"
        tools:text="@string/maxTemp" />

    <TextView
        android:id="@+id/tempMin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="3dp"
        android:textColor="#48FFD4"
        app:layout_constraintStart_toEndOf="@+id/temp"
        app:layout_constraintTop_toBottomOf="@+id/tempMax"
        tools:text="@string/minTemp" />

    <ImageView
        android:id="@+id/windCurrentIntensity"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/imgDescription"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/windCurrentDirection"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/windCurrentDirection"
        app:srcCompat="@drawable/wi_wind_beaufort_10" />

    <ImageView
        android:id="@+id/windCurrentDirection"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginEnd="-3dp"
        android:contentDescription="@string/imgDescription"
        android:scaleType="fitCenter"
        android:transformPivotX="13sp"
        android:transformPivotY="12sp"
        app:layout_constraintBottom_toTopOf="@+id/pressure"
        app:layout_constraintEnd_toStartOf="@+id/windCurrentIntensity"
        app:srcCompat="@drawable/ic_wi_wind_deg" />

    <ImageView
        android:contentDescription="@string/imgDescription"
        android:id="@+id/imageView2"
        android:layout_width="22sp"
        android:layout_height="22sp"
        android:layout_marginStart="3dp"
        android:src="@drawable/wi_sunrise"
        app:layout_constraintStart_toEndOf="@+id/sunrise"
        app:layout_constraintTop_toTopOf="@+id/sunrise" />

    <ImageView
        android:contentDescription="@string/imgDescription"
        android:id="@+id/imageView3"
        android:layout_width="22sp"
        android:layout_height="22sp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="-2dp"
        android:src="@drawable/wi_sunset"
        app:layout_constraintStart_toEndOf="@+id/sunset"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshCurrent"
        android:layout_width="match_parent"
        android:elevation="-2dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="@id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/sunset"
        app:layout_constraintVertical_bias="0.0"
        app:swipeRefreshLayoutProgressSpinnerBackgroundColor="@color/teal_200"
        tools:layout_editor_absoluteX="202dp">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/hourlyRecycler"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:elevation="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sunset"
            tools:itemCount="15"
            tools:listitem="@layout/forecast_item" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</androidx.constraintlayout.widget.ConstraintLayout>