<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/widgetLayout"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@drawable/widget_bg"
    android:theme="@style/Theme.SEALSWeather.AppWidgetContainer">

    <TextView
        android:id="@+id/tempWidget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="6dp"
        android:clickable="true"
        android:text="@string/temp"
        android:textColor="@color/white"
        android:textSize="24sp"
        tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/widgetWeatherType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/tempWidget"
        android:layout_marginStart="3dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="3dp"
        android:layout_toStartOf="@+id/pressureWidget"
        android:layout_toEndOf="@+id/widgetWeatherIcon"
        android:gravity="center"
        android:text="@string/weatherType"
        android:textColor="@color/white"
        android:textSize="16sp"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/widgetWindDir"
        android:layout_width="24dp"
        android:layout_height="30dp"
        android:layout_alignTop="@+id/widgetWeatherIcon"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="-3dp"
        android:layout_toStartOf="@+id/widgetWindSpd"
        android:contentDescription="TODO"
        app:srcCompat="@drawable/ic_wi_wind_deg"
        tools:ignore="ContentDescription,HardcodedText,ImageContrastCheck"
        tools:srcCompat="@drawable/ic_wi_wind_deg" />

    <ImageView
        android:id="@+id/widgetWeatherIcon"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignBottom="@+id/tempWidget"
        android:layout_marginStart="6dp"
        android:layout_marginBottom="0dp"
        android:layout_toEndOf="@+id/tempWidget"
        android:clickable="true"
        app:srcCompat="@drawable/wi_meteor"
        tools:ignore="ContentDescription,ImageContrastCheck,TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <ImageView
        android:id="@+id/widgetWindSpd"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignTop="@+id/widgetWeatherIcon"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="17dp"
        android:contentDescription="Wind speed"
        app:srcCompat="@drawable/wi_wind_beaufort_1"
        tools:ignore="HardcodedText,ImageContrastCheck"
        tools:srcCompat="@drawable/wi_wind_beaufort_1" />

    <TextView
        android:id="@+id/humidityWidget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/widgetWindDir"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="6dp"
        android:layout_toStartOf="@+id/widgetWindDir"
        android:text="@string/hum"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="11sp"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/pressureWidget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/widgetWindDir"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="2dp"
        android:layout_toStartOf="@+id/widgetWindDir"
        android:text="@string/pres"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="11sp"
        tools:ignore="TextContrastCheck" />

    <LinearLayout
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tempWidget"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/wlIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/wi_cloud_refresh"
            android:contentDescription="@string/weather_state" />

        <ImageView
            android:id="@+id/wlIcon1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/wi_cloud_refresh"
            android:contentDescription="@string/weather_state" />

        <ImageView
            android:id="@+id/wlIcon2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/wi_cloud_refresh"
            android:contentDescription="@string/weather_state" />

        <ImageView
            android:id="@+id/wlIcon3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/wi_cloud_refresh"
            android:contentDescription="@string/weather_state" />

        <ImageView
            android:id="@+id/wlIcon4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/wi_cloud_refresh"
            android:contentDescription="@string/weather_state" />

        <ImageView
            android:id="@+id/wlIcon5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/wi_cloud_refresh"
            android:contentDescription="@string/weather_state" />

        <ImageView
            android:id="@+id/wlIcon6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/wi_cloud_refresh"
            android:contentDescription="@string/weather_state" />

        <ImageView
            android:id="@+id/wlIcon7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/wi_cloud_refresh"
            android:contentDescription="@string/weather_state" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/list1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/list"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="-3dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/wlTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tempShort"
            android:textColor="@color/white"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/wlTemp1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tempShort"
            android:textColor="@color/white"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/wlTemp2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tempShort"
            android:textColor="@color/white"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/wlTemp3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tempShort"
            android:textColor="@color/white"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/wlTemp4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tempShort"
            android:textColor="@color/white"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/wlTemp5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tempShort"
            android:textColor="@color/white"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/wlTemp6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tempShort"
            android:textColor="@color/white"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/wlTemp7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tempShort"
            android:textColor="@color/white"
            android:textSize="11sp" />
    </LinearLayout>

</RelativeLayout>